Closed
Bug 825325
Opened 10 years ago
Closed 10 years ago
ImageContainer::NotifyPaintedImage is not called on android.
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
RESOLVED
FIXED
mozilla21
People
(Reporter: padenot, Assigned: padenot)
References
Details
Attachments
(1 file, 2 obsolete files)
2.43 KB,
patch
|
nical
:
review+
|
Details | Diff | Splinter Review |
This makes the mozPaintedFrames property of the media elements report wrong values. Maybe we need to call it from http://mxr.mozilla.org/mozilla-central/source/gfx/layers/opengl/ImageLayerOGL.cpp#963 Testcase: http://paul.cx/public/mozPaintedFrame.html
Assignee | ||
Comment 1•10 years ago
|
||
Assignee | ||
Comment 2•10 years ago
|
||
This is better.
Attachment #698783 -
Attachment is obsolete: true
Attachment #698783 -
Flags: review?(nical.bugzilla)
Attachment #698789 -
Flags: review?(nical.bugzilla)
Assignee | ||
Comment 3•10 years ago
|
||
Attachment #698791 -
Flags: review?(nical.bugzilla)
Assignee | ||
Updated•10 years ago
|
Attachment #698789 -
Attachment is obsolete: true
Attachment #698789 -
Flags: review?(nical.bugzilla)
Updated•10 years ago
|
Attachment #698791 -
Flags: review?(nical.bugzilla) → review+
Assignee | ||
Comment 4•10 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/70bb7f775178
Comment 5•10 years ago
|
||
Push backed out for Windows pgo-only mochitest-1 timeouts in media tests, since the backout of just 1abf4c88f8f1 didn't work (see bug 793274 comment 12 for example logs): https://hg.mozilla.org/integration/mozilla-inbound/rev/f2912b7e727a
Assignee | ||
Comment 6•10 years ago
|
||
After bisecting the queue on try, this patch has been proved to cause no problem [0], note the patch at the top of the queue that requests a PGO build. The problem remains in the other part of the queue [1]. This has been pushed as https://hg.mozilla.org/integration/mozilla-inbound/rev/109bbd733301 [0]: https://tbpl.mozilla.org/?tree=Try&rev=516ddf4c963c [1]: https://tbpl.mozilla.org/?tree=Try&rev=418c581b8023
Comment 7•10 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/109bbd733301
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
You need to log in
before you can comment on or make changes to this bug.
Description
•