Bug 825325 - ImageContainer::NotifyPaintedImage is not called on android. r=nical